# tskit-rust

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  LICENSE  MIGRATION_GUIDE.md  README.md  build.rs  changelog.html  cliff.toml  error_handling.html  examples.html  examples_haploid_wright_fisher.html  index.html  introduction.html  makedata.py  metadata.html  metadata_advanced.html  metadata_derive.html  metadata_python.html  metadata_schema.html  metadata_tables.html  migration_guide.html  prelude.html  print.html  python.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-06f3b587.js  searchindex-49a09f2a.js  searchindex-6e4b37d8.js  searchindex-aadc8aec.js  searchindex-c71cb33a.js  searchindex.js  searchindex.json  table_collection_adding_rows.html  (+14 more)
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  mdbook.yml  miri.yml  python.yml  security.yaml  semver.yml  test32bit.yml  tests.yml  valgrind.yml
book/: book.toml
book/src/: SUMMARY.md  error_handling.md  examples.md  examples_haploid_wright_fisher.md  introduction.md  metadata.md  metadata_advanced.md  metadata_derive.md  metadata_python.md  metadata_schema.md  metadata_tables.md  migration_guide.md  prelude.md  python.md  table_collection_adding_rows.md  table_collection_column_access.md  table_collection_creation.md  table_collection_row_access.md  table_collection_validation.md  tree_sequence_edge_diffs.md  tree_sequence_from_table_collection.md  tree_sequence_iterate_trees.md  tree_sequence_miscellaneous.md  tree_sequence_tree.md  working_with_table_collections.md  working_with_tree_sequences.md
examples/: bincode_metadata.rs  forward_simulation.rs  haploid_wright_fisher.rs  haploid_wright_fisher_edge_buffering.rs  haploid_wright_fisher_simple_edge_buffer.rs  json_metadata.rs  manual_metadata_encoding.rs  metadata_schema.rs  mutation.rs  mutation_metadata_bincode.rs  mutation_metadata_std.rs  row_id_types.rs  tables_without_metadata.rs  time_tree_initialization.rs  tree_traversals.rs
guide/: book.toml
guide/src/: SUMMARY.md  errorhandling.md  tables_and_tree_sequences.md
guide/src/comparison_to_c/: README.md  rowids.md
guide/src/developers/: README.md
guide/src/imports/: README.md
guide/src/rowids/: README.md
guide/src/tables/: README.md  adding_rows.md  check_integrity.md  initialization.md  sort_and_index.md
guide/src/treeseqs/: README.md  initialization.md
metadata_schema_testing/: Cargo.toml
python/: requirements.txt  requirements_locked_3_13.txt  test_bincode_metadata.py  test_json_metadata.py
python/tskit_glue/: Cargo.toml  pyproject.toml
python/tskit_glue/src/: lib.rs
python/zerocopy/: Cargo.toml
python/zerocopy/src/: lib.rs
python_scripts/: read_tablesfile.py  requirements.txt
src/: _macros.rs  bindings.rs  edge_differences.rs  edge_table.rs  edgebuffer.rs  error.rs  ffi.rs  flags.rs  individual_table.rs  lib.rs  metadata.rs  migration_table.rs  mutation_table.rs  newtypes.rs  node_table.rs  population_table.rs  prelude.rs  provenance.rs  site_table.rs  sys.rs  table_collection.rs  table_collection_interface.rs  table_column.rs  table_iterator.rs  table_views.rs  test_fixtures.rs  test_simplification.rs  test_table_collection.rs  test_tsk_variables.rs  traits.rs  tree_interface.rs  trees.rs  types.rs  util.rs
src/rsalgo/: incremental_algorithm.rs  mod.rs  stats.rs
src/sys/: bindings.rs  edge_table.rs  flags.rs  individual_table.rs  iter.rs  macros.rs  migration_table.rs  mod.rs  mutation_table.rs  newtypes.rs  node_table.rs  population_table.rs  provenance_table.rs  site_table.rs  table_collection.rs  tables.rs  trait_impls.rs  traits.rs  tree.rs  tree_interface.rs  treeseq.rs  tskbox.rs  types.rs
src/trees/: mod.rs  tree.rs  treeseq.rs
subprojects/kastore/: kastore.c
subprojects/tskit/tskit/: tables.c  tables.h  trees.c  trees.h
tests/: book_metadata.rs  book_table_collection.rs  book_trees.rs  empty_table_collection.rs  example_flags.rs  example_row_id_types.rs  example_tables_without_metadata.rs  experimental.rs  test_bad_metadata.rs  test_edge_buffer.rs  test_edge_difference_iteration.rs  test_error.rs  test_fixtures.rs  test_id_types.rs  test_invariant_kastore.c  test_lib.rs  test_macros.rs  test_metadata.rs  test_simplification.rs  test_table_collection.rs  test_table_traits.rs  test_tables.rs  test_tables_without_metadata.rs  test_trees.rs  test_treeseq_send_sync.rs  test_types.rs
tskit-derive/: Cargo.toml
tskit-derive/src/: lib.rs
tskit_rust_examples/: Cargo.toml  tree_traversals.rs
