[package]
name = "tskit"
version = "0.14.1"
authors = ["tskit developers <admin@tskit.dev>"]
build = "build.rs"
edition = "2021"
description = "rust interface to tskit"
license = "MIT"
homepage = "https://github.com/tskit-dev/tskit-rust"
repository = "https://github.com/tskit-dev/tskit-rust"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units=1

[dependencies]
thiserror = "1.0"
libc = "0.2.81"
streaming-iterator = "0.1.5"
bitflags = "1.2.1"
humantime = {version = "2.1.0", optional = true}
serde = {version = "1.0.118", features = ["derive"], optional = true}
serde_json = {version = "1.0.67", optional = true}
bincode = {version = "1.3.1", optional = true}
tskit-derive = {version = "0.2.0", path = "tskit-derive", optional = true}
mbox = "0.6.0"
delegate = "0.9.0"

[dev-dependencies]
anyhow = {version = "1.0.66"}
clap = {version = "~3.2.8", features = ["derive"]}
serde = {version = "1.0.118", features = ["derive"]}
serde-pickle = "1.1.0"
serde_json = {version = "1.0.67"}
bincode = "1.3.1"
rand = "0.8.3"
rand_distr = "0.4.0"
humantime = {version = "2.1.0"}
proptest = "1.0.0"
# chrono is out (for now) due to security issues
# chrono = "0.4.19"

[build-dependencies]
bindgen = "0.65.1"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"

[features]
bindings = []
provenance = ["humantime"]
derive = ["tskit-derive", "serde", "serde_json", "bincode"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

# Not run during tests
[[example]]
name = "tree_traversals"
