[package]
name = "tskit"
version = "0.15.0-alpha.3"
authors = ["tskit developers <admin@tskit.dev>"]
build = "build.rs"
edition = "2021"
description = "rust interface to tskit"
license = "MIT"
homepage = "https://github.com/tskit-dev/tskit-rust"
repository = "https://github.com/tskit-dev/tskit-rust"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
# Added for rust 1.80.0
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[profile.release]
lto = "fat"
codegen-units=1

[dependencies]
thiserror = "1.0"
libc = "0.2.155"
streaming-iterator = "0.1.5"
serde = {version = "1.0.203", features = ["derive"], optional = true}
serde_json = {version = "1.0.120", optional = true}
bincode = {version = "1.3.1", optional = true}
tskit-derive = {version = "0.2.0", path = "tskit-derive", optional = true}
chrono = { version = "0.4.40", default-features = false, features = ["now", "std"] , optional = true}

[dev-dependencies]
anyhow = {version = "1.0.100"}
clap = {version = "4.4.6", features = ["derive"]}
serde = {version = "1.0.203", features = ["derive"]}
serde-pickle = "1.1.0"
serde_json = {version = "1.0.120"}
bincode = "1.3.1"
rand = "0.8.3"
rand_distr = "0.4.0"

[build-dependencies]
bindgen = "0.69.4"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"

[features]
bindings = []
provenance = ["chrono"]
derive = ["tskit-derive", "serde", "serde_json", "bincode"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

# Not run during tests
[[example]]
name = "tree_traversals"

[[example]]
name = "json_metadata"
required-features = ["derive"]

[[example]]
name = "bincode_metadata"
required-features = ["derive"]

[[example]]
name = "manual_metadata_encoding"
