[package]
name = "metadata_schema_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tskit = {path = "..", features = ["derive"]}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = {version = "1.0.67"}
