[package]
name = "tskit-derive"
version = "0.1.0"
edition = "2018"
authors = ["tskit developers <admin@tskit.dev>"]
description = "procedural macros for tskit-rust"
license = "MIT"
homepage = "https://github.com/tskit-dev/tskit-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0.4"
